nav a z-index fix

--- a/styles/sass/_header.scss
+++ b/styles/sass/_header.scss
@@ -182,6 +182,7 @@ header {
             display: block;
             padding: 17px;
             box-sizing: border-box;
+            z-index: 101;
 
             &:hover {
                 color: $green;
